# pacman

./: Cargo.toml
game/: Cargo.toml
game/src/: main.rs  map1.json
game/src/camera/: mod.rs
game/src/camera/plugin/: mod.rs
game/src/camera/systems/: mod.rs
game/src/entity/: mod.rs
game/src/entity/components/: mod.rs
game/src/entity/plugin/: mod.rs
game/src/entity/systems/: mod.rs
game/src/graphics/: mod.rs
game/src/graphics/data/: mod.rs
game/src/graphics/plugin/: mod.rs
game/src/graphics/systems/: mod.rs
game/src/player/components/: mod.rs
game/src/player/plugin/: mod.rs
game/src/player/systems/: mod.rs
game/src/world/: mod.rs
game/src/world/components/: candy.rs  mod.rs  position.rs  tile.rs
game/src/world/events/: mod.rs
game/src/world/helpers/: mod.rs
game/src/world/plugin/: mod.rs
game/src/world/systems/: load_tiles.rs  mod.rs  setup_candy.rs
map_parser/: Cargo.toml
map_parser/src/: lib.rs
map_parser/src/tests/: map1.json  mod.rs
