[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
map_parser = { path = "../map_parser" }
bevy = { version = "0.8.1" }
bevy-inspector-egui = "0.13.0"
bevy_tiled_camera = "0.4.1"

[profile.dev]
opt-level = 1

[profile.dev.bevy."*"]
opt-level = 3
