[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
map_parser = { path = "../map_parser" }
bevy = { version = "0.8.1"}#, features = ["dynamic"] }
bevy-inspector-egui = "0.13.0"

[profile.dev]
opt-level = 1

[profile.dev.bevy."*"]
opt-level = 3

#[target.x86_64-unknown-linux-gnu]
#linker = "clang"
#rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
